# Nao-Demo

BehaviorTreeNAOUserActions/: CMakeLists.txt  main.cpp
BehaviorTreeNAOUserActions/Headers/: ActionNode.h  BehaviorTree.h  ConditionNode.h  ControlNode.h  Exceptions.h  Include.h  LeafNode.h  NAO.h  NodeSemaphore.h  ParallelNode.h  SelectorNode.h  SequenceNode.h  TreeNode.h
BehaviorTreeNAOUserActions/Headers/Actions/: ActionTestNode.h  BackOffNode.h  CrouchNode.h  MoveNode.h  SetActivityNode.h  SpeakNode.h  StandUpNode.h
BehaviorTreeNAOUserActions/Headers/Conditions/: ConditionTestNode.h  IsCrouchNode.h  IsMoveNode.h  IsStandUpNode.h  KnowWhatToDoNode.h  NewUserCommandNode.h  ToeBumperPressedNode.h
BehaviorTreeNAOUserActions/Sources/: ActionNode.cpp  BehaviorTree.cpp  ConditionNode.cpp  ControlNode.cpp  Exceptions.cpp  LeafNode.cpp  NodeSemaphore.cpp  ParallelNode.cpp  SelectorNode.cpp  SequenceNode.cpp  TreeNode.cpp
BehaviorTreeNAOUserActions/Sources/Actions/: ActionTestNode.cpp  BackOffNode.cpp  CrouchNode.cpp  MoveNode.cpp  SetActivityNode.cpp  SpeakNode.cpp  StandUpNode.cpp
BehaviorTreeNAOUserActions/Sources/Conditions/: ConditionTestNode.cpp  IsCrouchNode.cpp  IsMoveNode.cpp  IsStandUpNode.cpp  KnowWhatToDoNode.cpp  NewUserCommandNode.cpp  ToeBumperPressedNode.cpp
catkin_ws2/devel/: .catkin  .rosinstall  setup.sh
catkin_ws2/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws2/devel/include/behavior_trees/: ROSAction.h  ROSActionFeedback.h  ROSResult.h
catkin_ws2/devel/include/nao_basic/: activity.h  confirmation.h
catkin_ws2/devel/lib/ar_tracker/: ar_tracker  ar_tracker1  ar_tracker2
catkin_ws2/devel/lib/behavior_trees/: template_server
catkin_ws2/devel/lib/nao_basic/: BallDetectorTest
catkin_ws2/devel/lib/pkgconfig/: ar_tracker.pc  behavior_trees.pc  nao_basic.pc  openni_launch.pc  prova.pc
catkin_ws2/devel/share/ar_tracker/cmake/: ar_trackerConfig.cmake
catkin_ws2/devel/share/behavior_trees/cmake/: behavior_trees-msg-paths.cmake  behavior_treesConfig.cmake
catkin_ws2/devel/share/nao_basic/cmake/: nao_basicConfig.cmake
catkin_ws2/devel/share/openni_launch/cmake/: openni_launchConfig.cmake
catkin_ws2/devel/share/prova/cmake/: provaConfig.cmake
catkin_ws2/install/include/behavior_trees/: ROSActionGoal.h  ROSActionResult.h  ROSFeedback.h  ROSGoal.h
catkin_ws2/install/lib/pkgconfig/: ar_tracker.pc  openni_launch.pc
catkin_ws2/install/share/ar_tracker/cmake/: ar_trackerConfig.cmake
catkin_ws2/src/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws2/src/ar_tracker/: CMakeLists.txt  CTestTestfile.cmake  CTestTestfile.cmake~  Makefile  Makefile~  cmake_install.cmake  cmake_install.cmake~
catkin_ws2/src/ar_tracker/catkin_generated/: ar_tracker-msg-extras.cmake.installspace.in  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_ws2/src/ar_tracker/src/: ar_tracker1.cpp~  ar_tracker2.cpp
catkin_ws2/src/behavior_trees/: CTestTestfile.cmake  Makefile  cmake_install.cmake  originalBT  run.sh  run.sh~  runFORDEMO.sh
catkin_ws2/src/behavior_trees/catkin_generated/: behavior_trees-msg-paths-context.py
catkin_ws2/src/behavior_trees/cmake/: behavior_trees-genmsg.cmake
catkin_ws2/src/behavior_trees/data/: bt_B.txt  bt_B.txt~  bt_BDemo.txt  bt_FINAL.txt  bt_Journal.txt  bt_Journal.txt~
catkin_ws2/src/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
catkin_ws2/src/catkin_generated/installspace/: .rosinstall
catkin_ws2/src/devel/: .rosinstall  setup.sh
catkin_ws2/src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws2/src/nao_basic/: CMakeLists.txt  CMakeLists.txt~  CMakeListsFORDEMO.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws2/src/nao_basic (copy)/: CMakeCache.txt  CMakeCache.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
catkin_ws2/src/nao_basic (copy)/ar_tracker/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws2/src/nao_basic (copy)/behavior_trees/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws2/src/nao_basic (copy)/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
catkin_ws2/src/nao_basic (copy)/devel/: .catkin  .rosinstall  setup.sh
catkin_ws2/src/nao_basic (copy)/gtest/: CTestTestfile.cmake  Makefile
catkin_ws2/src/nao_basic (copy)/ltl3/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws2/src/nao_basic (copy)/openni_launch/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws2/src/nao_basic/catkin_generated/: nao_basic-msg-extras.cmake.develspace.in  nao_basic-msg-paths-context.py  package.cmake
catkin_ws2/src/nao_basic/catkin_generated/installspace/: nao_basic.pc
catkin_ws2/src/nao_basic/cmake/: nao_basic-genmsg-context.py
catkin_ws2/src/nao_basic/include/nao_basic/: motions_common.h
catkin_ws2/src/nao_basic/src/bt/: mission_failed_bt.cpp  mission_failed_bt.cpp~  move_forward.cpp~  move_forward_bt.cpp  move_forward_bt.cpp~  walker_bt.cpp
catkin_ws2/src/nao_basic/src/common/: motions_common.cpp
catkin_ws2/src/nao_basic/src/journal/: back_up_bt.cpp  cond_battery_level_bt.cpp  cond_bumpers_bt.cpp  cond_is_activity_dance_bt.cpp  cond_is_activity_eyes_bt.cpp  cond_is_activity_goodbye_bt.cpp  cond_is_activity_picture_bt.cpp  cond_is_activity_sit_bt.cpp  cond_is_activity_sleep_bt.cpp  cond_is_activity_sound_bt.cpp  cond_is_activity_stand_bt.cpp  cond_knows_activity_bt.cpp  cond_temperature_level_bt.cpp  reset_activity_bt.cpp  run_dance_bt.cpp  run_mov_tracker_bt.cpp  run_picture_game_bt.cpp  run_sleep_bt.cpp  run_sound_tracker_bt.cpp  say_foot_bt.cpp  say_goodbye_bt.cpp  say_hot_bt.cpp  say_recharge_bt.cpp  say_what_you_want_bt.cpp  set_activity_bt.cpp  sit_down_bt.cpp  stand_up_bt.cpp
catkin_ws2/src/openni_launch/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws2/src/openni_launch/catkin_generated/: pkg.develspace.context.pc.py
ros_stack/: youbot.rviz
youbot/: youbot.ttt
(+149 files in other folders)
